<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Silver2"
    android:backgroundTint="#7BB3AD"

    tools:context=".MainActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginTop="412dp"
        android:drawSelectorOnTop="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOverhead" />

    <ImageButton
        android:id="@+id/btnCompute"
        android:layout_width="110dp"
        android:layout_height="112dp"
        android:layout_marginTop="112dp"
        android:background="@null"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scaleX=".5"
        android:scaleY=".5"
        android:tooltipText="@string/txt_view_label_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/mcdia" />

    <EditText
        android:id="@+id/etLabor"
        style="@style/EditText"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="Labor"
        android:inputType="number"
        android:nextFocusDown="@id/etMaterials"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:tooltipText="@string/txt_view_label_labor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etOverhead"
        style="@style/EditText"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/txt_view_overhead"
        android:inputType="number"
        android:nextFocusDown="@id/etLabor"
        android:selectAllOnFocus="true"
        android:shadowColor="#AFAFAF"
        android:textAlignment="center"
        android:textSize="20sp"
        android:tooltipText="@string/txt_view_label_overhead"
        app:layout_constraintEnd_toStartOf="@+id/etLabor"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMaterials"
        style="@style/EditText"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Materials"
        android:inputType="number"
        android:nextFocusDown="@id/etMatMarkup"
        android:selectAllOnFocus="true"
        android:shadowColor="#AFAFAF"
        android:textAlignment="center"
        android:textSize="20sp"
        android:tooltipText="@string/txt_view_label_materials"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOverhead" />

    <EditText
        android:id="@+id/etMatMarkup"
        style="@style/EditText"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Markup"
        android:inputType="number|numberDecimal"
        android:nextFocusDown="@id/etWholesaleMarkup"
        android:selectAllOnFocus="true"
        android:shadowColor="#AFAFAF"
        android:textAlignment="center"
        android:textSize="20sp"
        android:tooltipText="@string/txt_view_label_markup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOverhead" />

    <EditText
        android:id="@+id/etWholesaleMarkup"
        style="@style/EditText"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_view_markup"
        android:inputType="number|numberDecimal"
        android:nextFocusDown="@id/etRetailMarkup"
        android:shadowColor="#AFAFAF"
        android:textAlignment="center"
        android:textSize="20sp"
        android:tooltipText="@string/txt_view_label_markupW"
        app:layout_constraintEnd_toEndOf="@+id/etWholesalePrice"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="@+id/etWholesalePrice"
        app:layout_constraintTop_toBottomOf="@+id/etWholesalePrice" />

    <EditText
        android:tooltipText="@string/txt_view_label_markupR"
        android:id="@+id/etRetailMarkup"
        style="@style/EditText"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_view_markup"
        android:inputType="number|numberDecimal"
        android:shadowColor="#AFAFAF"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRetailPrice" />

    <EditText
        android:id="@+id/etProdCost"
        style="@style/EditText"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:clickable="false"
        android:contextClickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="Product Cost"
        android:inputType="number"
        android:longClickable="true"
        android:shadowColor="#AFAFAF"
        android:textAlignment="center"
        android:textSize="20sp"
        android:tooltipText="@string/txt_view_label_product_cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMaterials" />

    <EditText
        android:id="@+id/etWholesalePrice"
        style="@style/EditText"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/txt_view_wholesale_price"
        android:inputType="none"
        android:shadowColor="#AFAFAF"
        android:textAlignment="center"
        android:textSize="20sp"
        android:tooltipText="@string/txt_view_label_wholesale"
        app:layout_constraintEnd_toStartOf="@+id/etRetailMarkup"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProdCost" />

    <!--<Button
        android:id="@+id/btnComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@null"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRetailMarkup" />-->

    <EditText
        android:id="@+id/etRetailPrice"
        style="@style/EditText"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/txt_view_retail_price"
        android:inputType="none"
        android:shadowColor="#AFAFAF"
        android:textAlignment="center"
        android:textSize="20sp"
        android:tooltipText="@string/txt_view_retail_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toEndOf="@+id/etWholesalePrice"
        app:layout_constraintTop_toBottomOf="@+id/etProdCost" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_view_instructions"
        app:layout_constraintEnd_toEndOf="@+id/etProdCost"
        app:layout_constraintStart_toStartOf="@+id/etProdCost"
        app:layout_constraintTop_toBottomOf="@+id/etProdCost" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/playfair"
        android:text="@string/txt_view_company_name"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>